...
    <string name="chat_welcome_message">Welcome to the chat!</string>
    <string name="delete_chat_icon_text">Delete</string>
    <string name="acquired">Acquired %s</string>
    <string name="changeLeftButton"><![CDATA[<]]></string>
    <string name="path_drawn">Path Drawn</string>
    <string name="changeRightButton"><![CDATA[>]]></string>
    <string name="global_stats">Global Stats</string>
    <string name="ml_shape_recognition_description">Remark : The shape description and score (the best score is 0), given above, are given by an automatic form recognition Machine Learning model.</string>
    <string name="shape_recognized_on_the_path_drawn">- Shape recognized on the Path drawn :</string>
    <string name="score_of_the_shape_recognized">- Score of the shape recognized :</string>
    <string name="average_speed_per_km">Avg Speed per Km</string>
    <string name="duration_per_km">Duration per Km</string>
    <string name="distance_per_segment">Distance per Segment</string>
    <string name="duration_per_segment">Duration per Segment</string>
    <string name="average_speed_per_segment">Avg Speed per Segment</string>
    <string name="distance_in_km">Distance (in Km)</string>
    <string name="average_speed_in_m_s">Average Speed (m/s)</string>
    <string name="duration_in_s">Duration (s)</string>
    <string name="segment">Segment</string>
    <string name="distance_in_m">Distance (in m)</string>
    <string name="tournament_post_creation">Tournament Post Creation</string>
    <string name="select_the_tournament">Select the tournament</string>
    <string name="select_the_run">Select the run</string>
    <string name="post">Post</string>
    <string name="add_post">add post</string>
    <string name="display_distance">Distance: %s kilometers</string>
    <string name="display_duration">Duration: %s</string>
    <string name="display_shape">Shape: %s</string>
    <string name="display_score">Score: %.2f</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="average_speed">Average Speed</string>
    <string name="average_duration">Average Duration</string>
    <string name="average_duration_in_s">Average Duration (s)</string>
    <string name="average_distance_in_m">Average Distance (in m)</string>
    <string name="average_distance_in_km">Average Distance (in km)</string>
    <string name="average_distance">Average Distance</string>
    <string name="distance_goal">Distance Goal</string>
    <string name="distance_goal_in_m">Distance Goal (in m)</string>
    <string name="activity_time_goal">Time Goal</string>
    <string name="activity_time_goal_in_s">Time Goal (in s)</string>
    <string name="path_number_goal">Path Num. Goal</string>
    <string name="average_speed_in_m_s_title">Average Speed (in m/s) :</string>
    <string name="average_duration_in_s_title">Average Duration (in s) :</string>
    <string name="average_distance_in_km_title">Average Distance (in km) :</string>
    <string name="number_of_distance_goal_reached">Number of distance goal reached :</string>
    <string name="number_of_time_goal_reached">Number of time goal reached :</string>
    <string name="number_of_path_goal_reached">Number of path goal reached :</string>
    <string name="register">&#10010; register</string>
    <string name="check_mark">✔</string>
    <string name="post_details">post details</string>
</resources>
